part4/exercise05/todo-backend/todo-backend-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5001
